hdone/objects/Product__mdt.object
<CustomObject>
    <description>Product names and descriptions. Used for ProviderOne plans, such as XYZ Medicaid.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Product description</description>
        <inlineHelpText>Product description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is product currently active?</description>
        <inlineHelpText>Is product currently active?</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Product code</description>
        <inlineHelpText>Product code</inlineHelpText>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Name of product</description>
        <inlineHelpText>Name of product</inlineHelpText>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of product. Custom usually created by customer. Standard are HealthDetail products</description>
        <inlineHelpText>Type of product</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                    <default>true</default>
                    <label>Custom</label>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <pluralLabel>Products</pluralLabel>
</CustomObject>